# Task2021_BattleCity

./: readme.txt
Framework/: CMakeLists.txt
Framework/src/: launch.cpp
PlanetOfTanks/: CMakeLists.txt
PlanetOfTanks/levels/: level1.txt
PlanetOfTanks/src/: AnimatedObject.h  Bonus.h  Boom.cpp  Boom.h  Bullet.cpp  Bullet.h  GameMap.cpp  GameMap.h  MovingObject.cpp  MovingObject.h  Object.h  Phoenix.h  RightInterface.cpp  RightInterface.h  StartedAnimation.cpp  StartedAnimation.h  Tank.cpp  Tank.h  Wall.cpp  Wall.h  game.cpp
